I am not 100% sure why but IE doesn't like swapping visiblity here. It's much happier changing display. I tried forcing hasLayout with the old classes, but that didn't do it. Not sure what else it could be. Probably a better fix than this out there.
--HG--
extra : rebase_source : 57fd87ceb0eefd931dda273b44dbecfd62f930af

--- a/stylesheets/exercises-package/stacks.less
+++ b/stylesheets/exercises-package/stacks.less
@@ -495,12 +495,19 @@
         .opacity(0);
         .transition(opacity 0.2s ease-in-out);
     }
+    .lte8 .exercises-header .streak-transition .expl-image {
+        visibility: visible;
+        display: none;
+    }
         .exercises-header .streak-transition .expl-image img {
             width: 100%;
         }
         .exercises-header .streak-transition.hover .expl-image {
             visibility: visible;
             .opacity(100);
+        }
+        .lte8 .exercises-header .streak-transition.hover .expl-image {
+            display: block;
         }
 
 .exercises-header .streak-transition .expl-image:before,
